# oekostrom-recherche

./: .gitignore  LICENSE.txt  README.md  indexanddata.json  pyproject.toml  requirements.txt
scraped_data/: combine_selections.csv  combined.json  oekotest.json  ok-power.json  okpower.json  rowo2019.json  stromauskunft.json  verivox.json
src/rowo_oekostrom_recherche/: __about__.py  combine.py  log.py
src/rowo_oekostrom_recherche/scraper/: base.py  manager.py  oekotest.py  okpower.py  rowo_2019.py  stromauskunft.py  verivox.py
tests/: __init__.py
