[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rowo-oekostrom-recherche"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Carli* Freudenberg", email = "kound@posteo.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "httpx",
  "beautifulsoup4",
  "pydantic",
]

[project.urls]
Documentation = "https://github.com/Carli* Freudenberg/rowo-oekostrom-recherche#readme"
Issues = "https://github.com/Carli* Freudenberg/rowo-oekostrom-recherche/issues"
Source = "https://github.com/Carli* Freudenberg/rowo-oekostrom-recherche"

[tool.hatch.version]
path = "src/rowo_oekostrom_recherche/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/rowo_oekostrom_recherche tests}"

[tool.coverage.run]
source_pkgs = ["rowo_oekostrom_recherche", "tests"]
branch = true
parallel = true
omit = [
  "src/rowo_oekostrom_recherche/__about__.py",
]

[tool.coverage.paths]
rowo_oekostrom_recherche = ["src/rowo_oekostrom_recherche", "*/rowo-oekostrom-recherche/src/rowo_oekostrom_recherche"]
tests = ["tests", "*/rowo-oekostrom-recherche/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
